--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Chair</h1>
-    <model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    <model-viewer src="./models/Untitled.glb"
               ios-src="https://modelviewer.dev/shared-assets/models/Astronaut.usdz"
               alt="A 3D model of an astronaut"
               ar
