--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
               ar
               auto-rotate
               camera-controls></model-viewer>
+
+              <model-viewer src="./models/desk.glb"
+              alt="A 3D model of an astronaut"
+              ar
+              auto-rotate
+              camera-controls></model-viewer>
 </body>
 </html>
