--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 		<div class="logo">
-			<img id="header-img"  src="./Images/1-hero-img.png"></img>
+			<img id="header-img"  src="./images/heroimg.png"></img>
       </div>
 
       <nav id="nav-bar">
