--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </button>
         </model-viewer>
         <div id="model-info">
-            Info about the model
+            Introducing the "PinePatina Executive Desk" – a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm. The addition of wax patine-finished drawers not only enhances the aesthetic appeal but also provides a touch of rustic sophistication. The desk features a spacious work surface, allowing ample room for creativity to flow. With its seamless blend of durability, style, and functionality, the PinePatina Executive Desk becomes the focal point of any office or study, where classic design meets modern sensibility. Elevate your work environment with this exquisite piece, where every detail tells a story of quality and craftsmanship.
         </div>
-         <h2>Casual</h2>
+         <h2>Rustic Pine Desk</h2>
         <p>Ideal for weekend rides in the park with the family.</p>
        <h2 id="prices">$2,500 USD</p></h2>
     </div>
