--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img class="product-img" src="./images/Desk-Poster.png">
         </div>
     
-       <div class="card">
+       <div class="card, model">
         <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="DeskPoster.webp" shadow-intensity="1">
             <button id="change-colour" class="Hotspot" slot="hotspot-1" data-position="0.24462271005400027m 0.927094956884221m -0.27987364024726524m" data-normal="-0.3293704410321221m 0.436550608196851m 0.8372208066318377m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change Colour</div>
