--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
   
      <div class="card">
-        <model-viewer src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/desk-poster" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
+        <model-viewer src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/desk-poster.png" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
             <button class="Hotspot" slot="hotspot-2" data-position="0.03339229808071842m 0.75m 0.009161159587098844m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change color</div>
             </button><button class="Hotspot" slot="hotspot-4" data-position="0.6713955709242437m 0.3799947683638645m 0.2753844017075644m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
