--- a/index.html
+++ b/index.html
@@ -24,24 +24,9 @@
 			<img id="header-img"  src="./images/heroimg.png"></img>
       </div>
 
-      <nav id="nav-bar">
-        <ul>
-          <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#products">Products</a></li>
-          <li><a class="nav-link"href="#contact">Contact</a></li>
-        </ul>
-      </nav>
 
   </header>
-
-
-  <section class="main" id="about">
-
-         
-    <span class="material-symbols-outlined">
-        chair
-        </span>
-  </section>
+<main>
   
   <h1>Rustic Pine Desk</h1> 
    <section class="product">
@@ -50,7 +35,7 @@
         </div>
     
        <div class="card, model">
-        <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="DeskPoster.webp" shadow-intensity="1">
+        <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/desk-poster.png" shadow-intensity="1">
             <button id="change-colour" class="Hotspot" slot="hotspot-1" data-position="0.24462271005400027m 0.927094956884221m -0.27987364024726524m" data-normal="-0.3293704410321221m 0.436550608196851m 0.8372208066318377m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change Colour</div>
             </button>
@@ -95,6 +80,7 @@
      <h2 id="prices">$2,500 USD</p></h2>
   </div>
 </section>
+</main>
 
 
 <footer class="footer">
