--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
   
   <h1>Rustic Pine Desk</h1> 
    <section class="product">
-      <div class="card">
-        <img class="product-img" src="./images/Desk-Poster.png">
-        </div>
     
        <div class="card, model">
         <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/desk-poster.png" shadow-intensity="1">
@@ -53,9 +50,9 @@
 </section>
 
 <section class="product">
-    <div class="card">
+    <!-- <div class="card">
       <img class="product-img" src="./images/Chair-Poster.png">
-      </div>
+      </div> -->
   
      <div class="card">
         <model-viewer src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/desk-poster.png" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
