--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <section class="product">
     
        <div class="card, model">
-        <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/desk-poster.png" shadow-intensity="1">
+        <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1">
             <button id="change-colour" class="Hotspot" slot="hotspot-1" data-position="0.24462271005400027m 0.927094956884221m -0.27987364024726524m" data-normal="-0.3293704410321221m 0.436550608196851m 0.8372208066318377m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change Colour</div>
             </button>
@@ -55,7 +55,7 @@
       </div> -->
   
      <div class="card">
-        <model-viewer src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/desk-poster.png" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
+        <model-viewer src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
             <button class="Hotspot" slot="hotspot-2" data-position="0.03339229808071842m 0.75m 0.009161159587098844m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change color</div>
             </button><button class="Hotspot" slot="hotspot-4" data-position="0.6713955709242437m 0.3799947683638645m 0.2753844017075644m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
