--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
   </header>
 <main>
   
-  <h1>Rustic Pine Desk</h1> 
+
    <section class="product">
-    
+
        <div class="card, model">
-        <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1">
+        <h1>Rustic Pine Desk</h1> 
+        <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1"  camera-orbit="15.43deg 78deg 3.796m" field-of-view="30deg"></model-viewer>>
             <button id="change-colour" class="Hotspot" slot="hotspot-1" data-position="0.24462271005400027m 0.927094956884221m -0.27987364024726524m" data-normal="-0.3293704410321221m 0.436550608196851m 0.8372208066318377m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change Colour</div>
             </button>
@@ -55,6 +56,7 @@
       </div> -->
   
      <div class="card">
+        <h1>Elegant Chair</h1> 
         <model-viewer src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
             <button class="Hotspot" slot="hotspot-2" data-position="0.03339229808071842m 0.75m 0.009161159587098844m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change color</div>
