--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
        <div class="card">
         <h1>Rustic Pine Desk</h1> 
+        <h2>$2,500 USD</p></h2>
         <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1"  camera-orbit="15.43deg 78deg 3.796m" field-of-view="30deg"></model-viewer>
         <button class="Hotspot" slot="hotspot-1" data-position="0.4679384885856622m 0.75m -0.06502403490764674m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Change color</div>
@@ -40,14 +41,13 @@
             <div class="HotspotAnnotation">Information</div>
         </button>
         </model-viewer>
-
-        <h2 id="prices">$2,500 USD</p></h2>
         <p id="model-info">Introducing the "PinePatina Executive Desk" – a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm. The addition of wax patine-finished drawers not only enhances the aesthetic appeal but also provides a touch of rustic sophistication. The desk features a spacious work surface, allowing ample room for creativity to flow. With its seamless blend of durability, style, and functionality, the PinePatina Executive Desk becomes the focal point of any office or study, where classic design meets modern sensibility. Elevate your work environment with this exquisite piece, where every detail tells a story of quality and craftsmanship.</p>
     
     </div>
       
     <div class="card">
         <h1>Elegant Chair</h1> 
+        <h2>$2,500 USD</p></h2>
         <model-viewer id="model" src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
             <button class="Hotspot" slot="hotspot-2" data-position="0.03339229808071842m 0.75m 0.009161159587098844m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change color</div>
@@ -68,6 +68,7 @@
 
 <div class="card">
     <h1>Elegant Chair</h1> 
+    <h2>$2,500 USD</p></h2>
     <model-viewer id="model" src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
         <button class="Hotspot" slot="hotspot-2" data-position="0.03339229808071842m 0.75m 0.009161159587098844m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Change color</div>
