--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div class="card">
         <h1>Elegant Chair</h1> 
         <h2>$2,500 USD</p></h2>
-        <model-viewer id="model" src="desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="10.5deg 73.09deg 3.796m" field-of-view="30deg">
-            <button class="Hotspot" slot="hotspot-2" data-position="0.03339229808071842m 0.75m 0.009161159587098844m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
+        <model-viewer src="./models/Chair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
+            <button class="Hotspot" slot="hotspot-1" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change color</div>
-            </button><button class="Hotspot" slot="hotspot-4" data-position="0.6713955709242437m 0.3799947683638645m 0.2753844017075644m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
+            </button><button class="Hotspot" slot="hotspot-2" data-position="0.20160460966519067m 0.9518647916701948m -0.30079544460952334m" data-normal="-0.16961308584409104m 0.31732330448544577m 0.93302589542889m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Information</div>
             </button>
             <div class="progress-bar hide" slot="progress-bar">
@@ -61,6 +61,7 @@
                 View in your space
             </button>
         </model-viewer>
+
 
         <p id="model-info">Introducing the "PinePatina Executive Desk" – a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm. The addition of wax patine-finished drawers not only enhances the aesthetic appeal but also provides a touch of rustic sophistication. The desk features a spacious work surface, allowing ample room for creativity to flow. With its seamless blend of durability, style, and functionality, the PinePatina Executive Desk becomes the focal point of any office or study, where classic design meets modern sensibility. Elevate your work environment with this exquisite piece, where every detail tells a story of quality and craftsmanship.</p>
     
