--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="card">
         <h1>Elegant Chair</h1> 
         <h2>$2,500 USD</p></h2>
-        <model-viewer src="./models/Chair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
+        <model-viewer id="model" src="./models/Chair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
             <button class="Hotspot" slot="hotspot-1" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">Change color</div>
             </button><button class="Hotspot" slot="hotspot-2" data-position="0.20160460966519067m 0.9518647916701948m -0.30079544460952334m" data-normal="-0.16961308584409104m 0.31732330448544577m 0.93302589542889m" data-visibility-attribute="visible">
