--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <div class="card">
         <h1>Rustic Pine Desk</h1> 
         <h2>$2,500 USD</p></h2>
-        <model-viewer id="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1"  camera-orbit="15.43deg 78deg 3.796m" field-of-view="30deg"></model-viewer>
+        <model-viewer class="model" id="model-desk" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1"  camera-orbit="15.43deg 78deg 3.796m" field-of-view="30deg"></model-viewer>
         <button class="Hotspot" slot="hotspot-1" data-position="0.4679384885856622m 0.75m -0.06502403490764674m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation" id="change-colour-desk">Change color</div>
         </button><button class="Hotspot" slot="hotspot-2" data-position="0.6774508100154468m 0.37972005282949417m 0.2754248908726997m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
@@ -48,7 +48,7 @@
     <div class="card">
         <h1>Elegant Chair</h1> 
         <h2>$2,500 USD</p></h2>
-        <model-viewer id="model" src="./models/Chair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
+        <model-viewer class="model" id="model-chair" src="./models/Chair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
             <button class="Hotspot" slot="hotspot-1" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation" id="change-colour-chair">Change color</div>
             </button><button class="Hotspot" slot="hotspot-2" data-position="0.20160460966519067m 0.9518647916701948m -0.30079544460952334m" data-normal="-0.16961308584409104m 0.31732330448544577m 0.93302589542889m" data-visibility-attribute="visible">
