--- a/index.html
+++ b/index.html
@@ -34,33 +34,36 @@
        <div class="card">
         <h1>Rustic Pine Desk</h1> 
         <h2>$2,500 USD</p></h2>
-        <model-viewer class="model" id="model-desk" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1"  camera-orbit="15.43deg 78deg 3.796m" field-of-view="30deg"></model-viewer>
-        <button class="Hotspot" slot="hotspot-1" data-position="0.4679384885856622m 0.75m -0.06502403490764674m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
-            <div class="HotspotAnnotation" id="change-colour-desk">Change color</div>
-        </button><button class="Hotspot" slot="hotspot-2" data-position="0.6774508100154468m 0.37972005282949417m 0.2754248908726997m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
-            <div class="HotspotAnnotation" id="model-info">Information</div>
-        </button>
-        </model-viewer>
-        <p id="model-info">Introducing the "PinePatina Executive Desk" – a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm. The addition of wax patine-finished drawers not only enhances the aesthetic appeal but also provides a touch of rustic sophistication. The desk features a spacious work surface, allowing ample room for creativity to flow. With its seamless blend of durability, style, and functionality, the PinePatina Executive Desk becomes the focal point of any office or study, where classic design meets modern sensibility. Elevate your work environment with this exquisite piece, where every detail tells a story of quality and craftsmanship.</p>
+        <model-viewer class="model" id="model-desk" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1" camera-orbit="15.43deg 78deg 3.796m" field-of-view="30deg"></model-viewer>
+    <button class="Hotspot change-colour" data-product="desk" data-position="0.4679384885856622m 0.75m -0.06502403490764674m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
+        <div class="HotspotAnnotation">Change color</div>
+    </button>
+    <button class="Hotspot model-info" data-product="desk" data-position="0.6774508100154468m 0.37972005282949417m 0.2754248908726997m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
+        <div class="HotspotAnnotation">Information</div>
+    </button>
+    <p class="product-info" data-product="desk">Introducing the "PinePatina Executive Desk" – a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm...</p>
+</div>
+
     
-    </div>
       
-    <div class="card">
-        <h1>Elegant Chair</h1> 
-        <h2>$2,500 USD</p></h2>
-        <model-viewer class="model" id="model-chair" src="./models/Chair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
-            <button class="Hotspot" slot="hotspot-1" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
-                <div class="HotspotAnnotation" id="change-colour-chair">Change color</div>
-            </button><button class="Hotspot" slot="hotspot-2" data-position="0.20160460966519067m 0.9518647916701948m -0.30079544460952334m" data-normal="-0.16961308584409104m 0.31732330448544577m 0.93302589542889m" data-visibility-attribute="visible">
-                <div class="HotspotAnnotation">Information</div>
-            </button>
-            <div class="progress-bar hide" slot="progress-bar">
-                <div class="update-bar"></div>
-            </div>
-            <button slot="ar-button" id="ar-button">
-                View in your space
-            </button>
-        </model-viewer>
+<div class="card">
+    <h1>Elegant Chair</h1>
+    <h2>$2,500 USD</h2>
+    <model-viewer class="model" id="model-chair" src="./models/Chair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
+        <button class="Hotspot change-colour" data-product="chair" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
+            <div class="HotspotAnnotation">Change color</div>
+        </button>
+        <button class="Hotspot model-info" data-product="chair" data-position="0.20160460966519067m 0.9518647916701948m -0.30079544460952334m" data-normal="-0.16961308584409104m 0.31732330448544577m 0.93302589542889m" data-visibility-attribute="visible">
+            <div class="HotspotAnnotation">Information</div>
+        </button>
+    </model-viewer>
+    <div class="progress-bar hide" slot="progress-bar">
+        <div class="update-bar"></div>
+    </div>
+    <button class="ar-button" data-product="chair" id="ar-button">
+        View in your space
+    </button>
+</div>
 
 
         <p id="model-info">Introducing the "PinePatina Executive Desk" – a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm. The addition of wax patine-finished drawers not only enhances the aesthetic appeal but also provides a touch of rustic sophistication. The desk features a spacious work surface, allowing ample room for creativity to flow. With its seamless blend of durability, style, and functionality, the PinePatina Executive Desk becomes the focal point of any office or study, where classic design meets modern sensibility. Elevate your work environment with this exquisite piece, where every detail tells a story of quality and craftsmanship.</p>
@@ -71,9 +74,9 @@
     <h1>Elegant BeanBag Chair</h1> 
     <h2>$2,500 USD</p></h2>
     <model-viewer class="model" id="model-bag" src="./models/BeanBagChair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairBeanBagPoster.webp" shadow-intensity="1" camera-orbit="19.19deg 84.23deg 3.136m" field-of-view="30deg">
-        <button class="Hotspot" slot="hotspot-1" data-position="-0.043356126970552133m 0.5909274566948688m -0.26310036099401657m" data-normal="-0.37004546510917596m 0.10841879737099902m 0.9226655505267117m" data-visibility-attribute="visible">
+        <button class="Hotspot" slot="hotspot-3" data-position="0.3244202687028326m 0.597882448594167m -0.15884041941043625m" data-normal="-0.23466056039888297m 0.4795673433361954m 0.8455469144871536m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Change color</div>
-        </button><button class="Hotspot" slot="hotspot-2" data-position="-0.01479896587360563m 0.37123710887726347m -0.19301517795189893m" data-normal="-0.30113793832361646m 0.5644483022063771m 0.7685792452561675m" data-visibility-attribute="visible">
+        </button><button class="Hotspot" slot="hotspot-4" data-position="0.46955521400503764m 0.40652945043696465m 0.18244111636200966m" data-normal="0.8111881299527389m 0.303633903586445m 0.4997802221143167m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Information</div>
         </button>
         <div class="progress-bar hide" slot="progress-bar">
