--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             View in your space
         </button>
     </div>
-    
 
-<div class="card">
+
+<div class="card" data-product="beanBag">
     <h1>Elegant BeanBag Chair</h1> 
     <h2>$2,500 USD</p></h2>
-    <model-viewer class="model" id="model-bag" src="./models/BeanBagChair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairBeanBagPoster.webp" shadow-intensity="1" camera-orbit="19.19deg 84.23deg 3.136m" field-of-view="30deg">
-        <button class="Hotspot" slot="hotspot-3" data-position="0.3244202687028326m 0.597882448594167m -0.15884041941043625m" data-normal="-0.23466056039888297m 0.4795673433361954m 0.8455469144871536m" data-visibility-attribute="visible">
+    <model-viewer class="model"  src="./models/BeanBagChair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairBeanBagPoster.webp" shadow-intensity="1" camera-orbit="19.19deg 84.23deg 3.136m" field-of-view="30deg">
+        <button class="Hotspot change-colour" slot="hotspot-3" data-position="0.3244202687028326m 0.597882448594167m -0.15884041941043625m" data-normal="-0.23466056039888297m 0.4795673433361954m 0.8455469144871536m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Change color</div>
-        </button><button class="Hotspot" slot="hotspot-4" data-position="0.46955521400503764m 0.40652945043696465m 0.18244111636200966m" data-normal="0.8111881299527389m 0.303633903586445m 0.4997802221143167m" data-visibility-attribute="visible">
+        </button><button class="Hotspot model-info" slot="hotspot-4" data-position="0.46955521400503764m 0.40652945043696465m 0.18244111636200966m" data-normal="0.8111881299527389m 0.303633903586445m 0.4997802221143167m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Information</div>
         </button>
         <div class="progress-bar hide" slot="progress-bar">
