--- a/index.html
+++ b/index.html
@@ -65,7 +65,27 @@
     </div>
 
 
-<div class="card" data-product="beanBag">
+    <div class="card" data-product="beanBag">
+        <h1>Beanbag Chair</h1>
+        <h2>$2,500 USD</h2>
+        <model-viewer class="model" src="./models/BeanBagChair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairBeanBagPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
+            <button class="Hotspot change-colour" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
+                <div class="HotspotAnnotation">Change color</div>
+            </button>
+            <button class="Hotspot model-info" data-position="0.20160460966519067m 0.9518647916701948m -0.30079544460952334m" data-normal="-0.16961308584409104m 0.31732330448544577m 0.93302589542889m" data-visibility-attribute="visible">
+                <div class="HotspotAnnotation">Information</div>
+            </button>
+        </model-viewer>
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+        <button class="ar-button">
+            View in your space
+        </button>
+    </div>
+
+
+<!-- <div class="card" data-product="beanBag">
     <h1>Elegant BeanBag Chair</h1> 
     <h2>$2,500 USD</p></h2>
     <model-viewer class="model"  src="./models/BeanBagChair.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/ChairBeanBagPoster.webp" shadow-intensity="1" camera-orbit="19.19deg 84.23deg 3.136m" field-of-view="30deg">
@@ -85,7 +105,7 @@
 
     <p id="model-info">Introducing the "PinePatina Executive Desk" – a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm. The addition of wax patine-finished drawers not only enhances the aesthetic appeal but also provides a touch of rustic sophistication. The desk features a spacious work surface, allowing ample room for creativity to flow. With its seamless blend of durability, style, and functionality, the PinePatina Executive Desk becomes the focal point of any office or study, where classic design meets modern sensibility. Elevate your work environment with this exquisite piece, where every detail tells a story of quality and craftsmanship.</p>
     
-</div>
+</div> -->
 
     
 </section>
