--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="Hotspot model-info" data-position="0.6774508100154468m 0.37972005282949417m 0.2754248908726997m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
             <div class="HotspotAnnotation">Information</div>
         </button>
-        <p class="desk-info">Introducing the "PinePatina Executive Desk" a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm...</p>
+        <p id="desk-info">Introducing the "PinePatina Executive Desk" a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm...</p>
     </div>
     
     <!-- Product 2: Elegant Chair -->
@@ -63,7 +63,7 @@
             View in your space
         </button>
 
-        <p class="chair-info">Introducing the "PinePatina Executive Desk" a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm...</p>
+        <p id="chair-info">Introducing the "PinePatina Executive Desk" a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm...</p>
     </div>
 
 
@@ -84,7 +84,7 @@
         <button class="ar-button">
             View in your space
         </button>
-        <p class="beanbag-info">Introducing the "PinePatina Executive Desk" a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm...</p>
+        <p id="beanbag-info">Introducing the "PinePatina Executive Desk" a masterpiece of craftsmanship and elegance for your workspace. Meticulously constructed from sturdy pine wood, this desk radiates a warm and natural charm...</p>
     </div>
 
 
