--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
     <div class="card" data-product="desk">
         <h1>Rustic Pine Desk</h1>
         <h2>$2,500 USD</h2>
-        <model-viewer class="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1" camera-orbit="15.43deg 78deg 3.796m" field-of-view="30deg"></model-viewer>
-        <button class="Hotspot change-colour" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
-            <div class="HotspotAnnotation">Change color</div>
-        </button>
-        <button class="Hotspot model-info" data-position="0.6774508100154468m 0.37972005282949417m 0.2754248908726997m" data-normal="0m 0.1458106043963634m 0.9893125227376671m" data-visibility-attribute="visible">
-            <div class="HotspotAnnotation">Information</div>
-        </button>
+        <model-viewer class="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1" camera-orbit="22.62deg 73.09deg 3.091m"  field-of-view="30deg">
+            <button class="Hotspot change-colour" data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m" data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m" data-visibility-attribute="visible">
+                <div class="HotspotAnnotation">Change color</div>
+            </button>
+            <button class="Hotspot model-info" data-position="0.20160460966519067m 0.9518647916701948m -0.30079544460952334m" data-normal="-0.16961308584409104m 0.31732330448544577m 0.93302589542889m" data-visibility-attribute="visible">
+                <div class="HotspotAnnotation">Information</div>
+            </button>
+    </model-viewer>
         <div class="product-info" id="desk-info"><p>Introducing our Rustic Pine Desk, a timeless piece that seamlessly blends craftsmanship with an inviting charm. Crafted from sturdy pine wood, this desk is more than just a workspace – it's a testament to the artistry and warmth of natural materials.
 
             The distinctive grain of the pine wood adds character, creating a rustic allure that transports you to a cabin in the woods. Meticulously constructed, the desk features a spacious work surface, providing ample room for creativity to flow and productivity to thrive.
