--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
         <div class="logo">
-            <img id="header-img" src="./images/heroimg.png"></img>
+            <img id="header-img" src="./images/header.png"></img>
         </div>
 
 
@@ -33,10 +33,10 @@
             <div class="card1">
                 <div class="card" data-product="desk">
                     <h1>Rustic Pine Desk</h1>
-                    <h2>$2,500 USD</h2>
+                    <h2>$500 CAD</h2>
                     <model-viewer class="model" src="./models/desk.glb" ar ar-modes="webxr scene-viewer quick-look"
                         camera-controls poster="./images/DeskPoster.webp" shadow-intensity="1"
-                        camera-orbit="22.62deg 73.09deg 3.091m" field-of-view="30deg">
+                        camera-orbit="23.9deg 83.37deg 3.7m" field-of-view="28.52deg">
                         <button class="Hotspot change-colour"
                             data-position="0.17163472261701496m 0.6920118569702743m -0.24086802219311831m"
                             data-normal="-0.19992926251495172m 0.17267762940476483m 0.9644743264044816m"
